--- a/productos.html
+++ b/productos.html
@@ -92,7 +92,8 @@
                         
                     </span>
                 </div>
-                <button class="btn-pagar">Pagar <i class="fa-solid fa-bag-shopping"></i> </button>
+                
+                <a href="pago_tarjeta.html" class="btn-pago">Pagar <i class="fa-solid fa-bag-shopping"></i></a>
             </div>
         </div>
     </section>
